--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "scripts": {
         "test": "echo \"No test specified\" && exit 1",
-        "start": "node CasinoBot.js"
+        "start": "node run.js"
     },
     "repository": {
         "type": "git",
